# binstaller

./: Cargo.toml  README.md
src/: main.rs  releases.rs  schema.rs
