[package]
name = "binstaller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.3", features = ["derive"] }
directories = "5.0.1"
flate2 = "1.0.26"
miniserde = "0.1.30"
reqwest = { version = "0.11.18", features = ["blocking"] }
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
zip-extract = "0.1.2"
